# mona

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.aimsproj  README.md  _config.yml  aimsproj.mk  algorithm.html  api.html  caf  caf_configure  caf_make  cli.html  dispatcher.py  example.mk  exampleproj.mk  genindex.html  geom.py  geomlib.py  getting-started.html  glossary.html  index.html  logparser.py  mypy.ini  objects.inv  proj.mk  projaims.mk  projexample.mk  projmbd.mk  py-modindex.html  pyaims.py  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  (+2 more)
.doctrees/: api.doctree  environment.pickle  index.doctree
_modules/: index.html
_modules/caf/: futures.html  runners.html  sessions.html  tasks.html
_modules/caf/hashing/: hashing.html
_modules/caf/rules/: dirtask.html  rules.html
_modules/caf/sci/: geomlib.html
_modules/caf2/: futures.html  sessions.html  tasks.html
_modules/caf2/hashing/: hashing.html
_modules/caf2/rules/: rules.html
_modules/mona/: dirtask.html  files.html  futures.html  hashing.html  rules.html  runners.html  sessions.html  tasks.html
_modules/mona/hashing/: hashing.html
_modules/mona/plugins/: cache.html  files.html  parallel.html  tmpdir.html
_modules/mona/rules/: dirtask.html  rules.html
_modules/mona/sci/: geomlib.html  tex.html
_modules/mona/sci/aims/: aims.html  parse.html
_sources/: api.rst.txt  glossary.rst.txt  index.rst.txt
_static/: documentation_options.js
caf/: Announcer.py  Caf.py  Configure.py  Glob.py  Logging.py  Remote.py  Scheduler.py  Utils.py  __init__.py  app.py  argparse_cli.py  asyncio.py  cellar.py  cellar_common.py  cli.py  cmds.py  ctx.py  db.py  dispatch.py  errors.py  executors.py  futures.py  graph.py  hooks.py  json.py  pluggable.py  runners.py  scheduler.py  sessions.py  tasks.py  utils.py
caf/Tools/: _geomlib_deprecated.py  aims.py  aims.tx  aims_dsl.py  convert.py  geomlib.py
caf/cli/: __init__.py  app.py  cli.py  glob.py  table.py
caf/hashing/: __init__.py  func.py  hashing.py
caf/plugins/: cache.py  files.py  parallel.py  tmpdir.py
caf/rules/: dirtask.py  rules.py
caf/sci/: geomlib.py
caf/sci/aims/: aims.py  dsl.py  parse.py
caf2/: __init__.py  cache.py  caf.py  collections.py  errors.py  files.py  futures.py  graph.py  hashing.py  json.py  json_utils.py  pluggable.py  rules.py  runners.py  sessions.py  tasks.py  utils.py
caf2/hashing/: __init__.py  func.py  hashing.py
caf2/plugins/: __init__.py  cache.py  files.py  parallel.py  tmpdir.py
caf2/rules/: __init__.py  aims.py  dirtask.py  rules.py
caf2/sci/: aims.py  atom-data.csv  geomlib.py
caf2/sci/aims/: __init__.py  aims.py  dsl.py
caflib/: Announcer.py  CLI.py  CLI2.py  Caf.py  Cellar.py  Configure.py  Context.py  Context2.py  Core.py  Generators.py  Glob.py  Hook.py  Listing.py  Logging.py  Remote.py  Scheduler.py  Task.py  Template.py  Timing.py  Tools  Utils.py  Worker.py  __init__.py  asyncio.py
caflib/Tools/: aims.py  aims_dsl.py  convert.py  dataset.py  geomlib.py  geomlib2.py  mbd.py
caflib/examples/aims/: control.in  cscript
caflib/examples/basic/: cscript  square.sh
caflib/examples/c-program/: cscript
caflib/examples/compile/: cscript  hello.c
caflib/extras/: convert.py  logparser.py  parsing.py  pyaims.py
datasets/: .gitignore  Makefile  README.md  csv2json.py  geomlib.py  sanitize.py
datasets/l7/: Makefile  README.md  finalize.py  ref.bib
datasets/l7/src/: energies.csv
datasets/s22/: Makefile  README.md  finalize.py
datasets/s22/src/: energies.csv  suppl-info.txt
docs/: Makefile  api.rst  cli.rst  conf.py  index.rst  quickstart.rst  requirements.txt
example/: .gitignore  Makefile  exampleproj.mk  extract.py  hydra_test.job.sh  prepare.py  process.py
examples/: .gitignore
examples/aims/: app.py  cscript  geometry.in
examples/basic/: a.in  app.py  cscript  cscript.py  square.sh
examples/c-program/: cscript  cscript.py
examples/compile/: cscript  hello.c
examples/cprogram/: app.py
examples/test/: cscript.py
ext/: mbd.mk  pyaims.py  pyexample.py
mona/: __init__.py  app.py  cli.py  dag.py  dirtask.py  errors.py  files.py  futures.py  hashing.py  json.py  pluggable.py  pyhash.py  remotes.py  rules.py  runners.py  sessions.py  table.py  tasks.py  utils.py
mona/cli/: __init__.py  app.py  cli.py
mona/hashing/: func.py  hashing.py
mona/plugins/: __init__.py  cache.py  files.py  parallel.py  tmpdir.py
mona/rules/: __init__.py  dirtask.py  rules.py
mona/sci/: geomlib.py  tex.py
mona/sci/aims/: __init__.py  aims.py  aims.tx  dsl.py  parse.py
scripts/: caf
src/mona/: __init__.py  app.py  cli.py  dag.py  dirtask.py  errors.py  files.py  futures.py  json.py  pluggable.py  pyhash.py  remotes.py  rules.py  runners.py  sessions.py  table.py  tasks.py  utils.py
src/mona/plugins/: __init__.py  cache.py  parallel.py  tmpdir.py
src/mona/sci/: geomlib.py
src/mona/sci/aims/: aims.py  parse.py
stubs/: cscript.pyi  docopt.pyi
tests/: conftest.py  test_cache.py  test_caf2.py  test_core.py  test_dirtask.py  test_errors.py  test_fib.py  test_files.py  test_hashing.py  test_json.py  test_jsonutils.py  test_parallel.py  test_tmpdir.py
tools/: aims.mk  example.mk  geomlib.py  pyexample.py
utils/: pack.py
