[tool.black]
py36 = true
skip-string-normalization = true

[tool.poetry]
name = "mona"
version = "0.1.0"
description = "Distributed calculation framework"
readme = "README.md"
authors = ["Jan Hermann <dev@janhermann.cz>"]
repository = "https://github.com/azag0/mona"
documentation = "https://azag0.github.io/mona"
license = "MPL-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.6"
mypy_extensions = "^0.4.1"
graphviz = { version = "^0.10.0", optional = true }
numpy = { version = "^1.15", optional = true }
textx = { version = "~1.5", optional = true }
pytest = { version = "^3.8", optional = true }
coverage = { version = "^4.5", optional = true }
sphinx = { version = "^1.8", optional = true }
toml = { version = "^0.9.6", optional = true }
click = { version = "^7.0", optional = true }
pytest-mock = { version = "^1.10", optional = true }
sphinxcontrib-asyncio = { version = "^0.2.0", optional = true }
sphinx-autodoc-typehints = { version = "^1.3", optional = true }

[tool.poetry.extras]
cli = ["click", "toml"]
graphviz = ["graphviz"]
sci = ["numpy", "textx"]
test = ["pytest", "pytest-mock"]
cov = ["coverage"]
doc = [
    "sphinx",
    "toml",
    "sphinxcontrib-asyncio",
    "sphinx-autodoc-typehints"
]

[tool.poetry.dev-dependencies]
mypy = "^0.641.0"
lxml = "^4.2"
flake8 = "^3.5"
flake8-bugbear = "^18.8"
flake8-comprehensions = "^1.4"
flake8-quotes = "^1.0"
black = "^18.3-alpha.0"

[tool.poetry.scripts]
mona = "mona.cli:cli.main"
