[tool.black]
py36 = true
skip-string-normalization = true

[tool.poetry]
name = "mona"
version = "0.2.6"
description = "Calculation framework"
readme = "README.md"
packages = [{ include = "mona", from = "src" }]
authors = ["Jan Hermann <dev@jan.hermann.name>"]
repository = "https://github.com/jhrmnn/mona"
documentation = "https://jhrmnn.github.io/mona"
license = "MPL-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.6"
graphviz = "^0.10.0"
toml = "^0.10"
click = "^7.0"
numpy = { version = "^1.15", optional = true }
textx = { version = "~1.5", optional = true }
pytest = { version = "^3.8", optional = true }
coverage = { version = "^4.5", optional = true }
sphinx = { version = "^1.8", optional = true }
pytest-mock = { version = "^1.10", optional = true }
sphinxcontrib-asyncio = { version = "^0.2.0", optional = true }
jinja2 = { version = "^2.10", optional = true }

[tool.poetry.extras]
sci = ["numpy", "textx", "jinja2"]
test = ["pytest", "pytest-mock"]
cov = ["coverage"]
doc = ["sphinx", "sphinxcontrib-asyncio"]

[tool.poetry.dev-dependencies]
mypy = "^0.720"
lxml = "^4.2"
flake8 = "^3.5"
flake8-bugbear = "^19"
flake8-comprehensions = "^2"
flake8-quotes = "^2"
black = "^19-beta.0"
pydocstyle = "^4"
pep8-naming = "^0.8"
isort = "^4.3"

[tool.poetry.scripts]
mona = "mona.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
