[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=0.12.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mona"
version = "0.0.0"
description = "Calculation framework"
authors = ["Jan Hermann <dev@jan.hermann.name>"]
readme = "README.md"
packages = [
    { include = "mona", from = "src" }
]
repository = "https://github.com/jhrmnn/mona"
documentation = "https://jhrmnn.github.io/mona"
license = "MPL-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.6"
graphviz = "^0.10.0"
toml = "^0.10"
click = "^7.0"
numpy = { version = "^1.15", optional = true }
textx = { version = "~1.5", optional = true }
pytest = { version = "^6", optional = true }
coverage = { version = "^5", optional = true }
sphinx = { version = "^2.2", optional = true }
pytest-mock = { version = "^1.10", optional = true }
jinja2 = { version = "^2.10", optional = true }

[tool.poetry.extras]
sci = ["numpy", "textx", "jinja2"]
test = ["pytest", "pytest-mock"]
cov = ["coverage"]
doc = ["sphinx"]

[tool.poetry.dev-dependencies]
mypy = ">=0.800"
lxml = "^4.2"
flake8 = "^3.5"
flake8-bugbear = ">=19"
flake8-comprehensions = ">=3"
flake8-quotes = ">=3"
black = ">=20-beta.0"
pydocstyle = ">=5"
pep8-naming = ">=0.7"
isort = ">=5"

[tool.poetry.scripts]
mona = "mona.cli:cli"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true
pattern = '^(?P<base>\d+\.\d+\.\d+)$'

[tool.black]
target-version = ["py37"]
skip-string-normalization = true
